<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.messager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_messager"
        android:name="com.example.messager.ui.messages.MessagesFragment"
        android:label="@string/title_messager"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.messager.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.messager.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.messager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>